// Copyright 2023 Intrinsic Innovation LLC
// Intrinsic Proprietary and Confidential
// Provided subject to written agreement between the parties.

syntax = "proto3";

package xfa.icon.actions;

import "intrinsic/icon/proto/blended_cartesian_move.proto";
import "intrinsic/motion_planning/trajectory_planning/blended_joint_move.proto";

message BlendedMoveActionFixedParams {
  // One of a range of blended move parameters, which define a trajectory
  // generation problem to be solved by the ICON server.
  oneof blended_move {
    intrinsic_proto.BlendedJointMove blended_joint_move = 1;
    intrinsic_proto.BlendedCartesianMove blended_cartesian_move = 2;
  }
}
